// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoaderWrapper: Component should render correctly 1`] = `
<styled.div>
  <div
    style={
      Object {
        "color": "white",
      }
    }
  >
    <h1>
      Test
    </h1>
    <h2>
      Ut elementum ex nulla
    </h2>
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec pulvinar est.
    </p>
  </div>
</styled.div>
`;

exports[`LoaderWrapper: Component should render correctly when loading 1`] = `
<styled.div>
  <Loader />
</styled.div>
`;

exports[`LoaderWrapper: Component should render correctly when no data 1`] = `
<styled.div>
  <NoData />
</styled.div>
`;

exports[`LoaderWrapper: Component should render error correctly 1`] = `
<styled.div>
  <styled.div>
    Some error
  </styled.div>
</styled.div>
`;
